# notes

./: .gitignore  .gitmodules  README.md  labworkspacesmain-workspace-db39.jupyterlab-workspace  macros.md  main-workspace.json  mb.txt  postBuild  pyproject.toml  start.txt
electromagnetism/: multipole-expansion.md
maths/: Untitled.ipynb  conservative-vector-field.md  cramers-rule.md  curvilinear-coordinates.md  differentiate-under-the-integral.md  equivalence-class.md  exponential-characterisation.md  field.md  fourier-series.md  fourier-transform.md  fundamental-theorem-of-calculus.md  group-coset-partition-theorem.md  group.md  groups.md  inner-product-space.md  integration-by-substitution.md  inverse-transform-sampling.md  limit.md  map.md  matrix-determinant-properties.md  matrix-representation.md  piecewise-functions.ipynb  ring.md  second-order-odes.md  set.md  tensor-product.md  total-derivative.md  vector-space.md  vector-spaces.md  wronskian.md
mechanics/: 2D-collisions.md  2D-non-relativistic-collisions.ipynb  2D-non-relativistic-collisions.md  2D-non-relativistic-elastic-collisions.ipynb  constrained-optimisation.md  cross-section.md  kinematics.ipynb  lagrangian.md  principle-of-stationary-action.md
nuclear/: Untitled.ipynb  amplifiers.md  basic-electronics.md  binding-energy.md  digital-conversion.md  electronics.md  operation-modes.md  operational-amplifiers.md  (+2 more)
nuclear-electronics/: additions.txt  digital-conversion.md  operation-modes.md
nuclear-physics/: basic-concepts.md  electromagnetic-moments.md  excited-states.md  isospin.md  nuclear-masses.md  reactions.md  single-particle-models.md  spin-and-parity.md  strong-force.md  the-deuteron.md
(+109 files in other folders)
