[tool.poetry]
name = "notes"
version = "0.1.0"
description = "A collection of physics and mathematics notes written over the course of a PhD."
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0"
jupyterlab = "^2.0.1"
bqplot = "^0.11.5"
nbdime = "^1.0"
metakernel = "^0.20.14"
jupyterlab-git = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
