[tool.poetry]
name = "notes"
version = "0.1.0"
description = "A collection of physics and mathematics notes written over the course of a PhD."
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.0.8"
matplotlib = "^3.3.4"
ipympl = "^0.6.3"
numpy = "^1.20.1"
jupyterlab-markup = "^1.0.0-alpha.1"
jupyterlab-widgets = "^1.0.0"
ipywidgets = "^7.6.3"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
